test-suite/tests/roundtrip/invalid/syntax/malformed_line/05/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/malformed_line/05/input.essence:5:11:
  |
5 | such that ? b < A
  |           ^^^^^^^
Skipped tokens

tests/roundtrip/invalid/syntax/malformed_line/05/input.essence:5:11:
  |
5 | such that ? b < A
  |           ^
Missing Expression

